[package]
name = "asms"
version = "0.1.0"
edition = "2021"
default-run = "main"

[workspace]
members = ["batch"]

[dependencies]
anyhow = "1.0.63"
dos-actors = { version = "2.1.0", features = [
    "apache-arrow",
    "fem",
    "asm",
    "mount-ctrl_s8000d0005",
    "m1-ctrl",
    "windloads",
    "matio-rs",
] }
fem = { version = "0.3.0", package = "gmt-fem" }
lom = { version = "1.0.0", package = "gmt-lom", features = ["apache"] }
m1-ctrl = "0.1.2"
m2-ctrl = { version = "1.0.0", features = ["asm"] }
matio-rs = "0.3.0"
skyangle = "0.1.2"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"] }
vec_box = "1.0.0"
