[package]
name = "asms"
version = "0.1.0"
edition = "2021"
default-run = "main"

[workspace]
members = ["batch"]

[dependencies]
dos-actors = { version = "3.0.1", package = "gmt_dos-actors", features = [
    "matio-rs",
], path = "../dos-actors" }
anyhow = "1.0.63"
fem = { version = "0.3.0", package = "gmt-fem", path = "../fem", features = [
    "mount",
] }
lom = { version = "1.0.0", package = "gmt-lom", features = ["apache"] }
m1-ctrl = { version = "0.1.2", path = "../m1-ctrl" }
m2-ctrl = { version = "1.0.0", features = ["asm"], path = "../m2-ctrl" }
skyangle = "0.1.2"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"] }
vec_box = "1.0.0"
bincode = "1.3.3"
nalgebra = "0.31.1"
uid = { version = "0.1.2", package = "dos-uid" }
arrow = { version = "0.1.0", path = "../dos-actors/clients/arrow", package = "gmt_dos-clients_arrow" }
mount = { version = "0.1.0", path = "../dos-actors/clients/mount", package = "gmt_dos-clients_mount" }
windloads = { version = "0.1.0", path = "../dos-actors/clients/windloads", package = "gmt_dos-clients_windloads" }
geotrans = "0.2.2"

[features]
damping002 = ["mount/s8000d002ze30"]
damping0005 = ["mount/s8000d0005"]

[[bin]]
name = "analysis"
path = "src/bin/analysis/main.rs"
